--- a/BisUtils.Parsers/BisUtils.Parsers.ParamParser/BisUtils.Parsers.ParamParser.csproj
+++ b/BisUtils.Parsers/BisUtils.Parsers.ParamParser/BisUtils.Parsers.ParamParser.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\BisUtils.Generated\BisUtils.Generated.ParamLang\BisUtils.Generated.ParamLang.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
+    </ItemGroup>
+
 </Project>
