feat(paramparser): Add basic ParamFile object
Missing enum support

--- a/BisUtils.Tools/ParamConverter/ParamConverter.csproj
+++ b/BisUtils.Tools/ParamConverter/ParamConverter.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\BisUtils.Extensions\BisUtils.Extensions.ParamConversion\BisUtils.Extensions.ParamConversion.csproj" />
+      <ProjectReference Include="..\..\BisUtils.Parsers\BisUtils.Parsers.ParamParser\BisUtils.Parsers.ParamParser.csproj" />
+    </ItemGroup>
+
 </Project>
