feat(paramconversion): Add Binarization Logic
Added Binarization logic and restructured the paramconverson project

--- a/BisUtils.Extensions/BisUtils.Extensions.ParamConversion/BisUtils.Extensions.ParamConversion.csproj
+++ b/BisUtils.Extensions/BisUtils.Extensions.ParamConversion/BisUtils.Extensions.ParamConversion.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\BisUtils.Core\BisUtils.Core.csproj" />
+      <ProjectReference Include="..\..\BisUtils.Parsers\BisUtils.Parsers.ParamParser\BisUtils.Parsers.ParamParser.csproj" />
+    </ItemGroup>
+
 </Project>
