feat(pbo): Add Logic For Reading PBO Files
Add all boilerplate code for pbo file interaction.
currently there are some small issues with the datablocks associated with entries. This NEEDS to be fixed and until then this library is considered broken. Other than that PBO reading seems all set

BROKEN:  Work on data read/write. Everything else is ready

--- a/BisUtils.Tools/ParamConverter/ParamConverter.csproj
+++ b/BisUtils.Tools/ParamConverter/ParamConverter.csproj
@@ -8,8 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\BisUtils.DZA2S\BisUtils.DZA2S.csproj" />
       <ProjectReference Include="..\..\BisUtils.Extensions\BisUtils.Extensions.ParamConversion\BisUtils.Extensions.ParamConversion.csproj" />
       <ProjectReference Include="..\..\BisUtils.Parsers\BisUtils.Parsers.ParamParser\BisUtils.Parsers.ParamParser.csproj" />
+      <ProjectReference Include="..\..\BisUtils.PBO\BisUtils.PBO.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta3" />
     </ItemGroup>
 
 </Project>
