feat(paramparser): Remove ParamConversion In Favor Of ParamParser
ParamParser now handles everything regarding paramfiles.
Currently Reading binarized files is broken

--- a/BisUtils.Parsers/BisUtils.Parsers.ParamParser/BisUtils.Parsers.ParamParser.csproj
+++ b/BisUtils.Parsers/BisUtils.Parsers.ParamParser/BisUtils.Parsers.ParamParser.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\BisUtils.Core\BisUtils.Core.csproj" />
       <ProjectReference Include="..\..\BisUtils.Generated\BisUtils.Generated.ParamLang\BisUtils.Generated.ParamLang.csproj" />
     </ItemGroup>
 
