--- a/BisUtils.PBO/BisUtils.PBO.csproj
+++ b/BisUtils.PBO/BisUtils.PBO.csproj
@@ -4,6 +4,15 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageVersion>1.0.1</PackageVersion>
+        <Title>BisUtils.PBO</Title>
+        <Authors>Flipper, Ryann</Authors>
+        <Description>Library for interacting with DayZ's pbo files</Description>
+        <PackageLicenseUrl>https://raw.githubusercontent.com/FlipperPlz/BisUtils/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/FlipperPlz/BisUtils</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>dayz, pbo</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
