--- a/BisUtils.Tools/ParamConverter/ParamConverter.csproj
+++ b/BisUtils.Tools/ParamConverter/ParamConverter.csproj
@@ -5,11 +5,15 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Company>Ryann</Company>
+        <PublishAot>true</PublishAot>
+        <Product>JunkRemover</Product>
+        <AssemblyVersion>0.0.0</AssemblyVersion>
+        <FileVersion>0.0.0</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\BisUtils.DZA2S\BisUtils.DZA2S.csproj" />
-      <ProjectReference Include="..\..\BisUtils.Extensions\BisUtils.Extensions.ParamConversion\BisUtils.Extensions.ParamConversion.csproj" />
       <ProjectReference Include="..\..\BisUtils.Parsers\BisUtils.Parsers.ParamParser\BisUtils.Parsers.ParamParser.csproj" />
       <ProjectReference Include="..\..\BisUtils.PBO\BisUtils.PBO.csproj" />
     </ItemGroup>
