--- a/BisUtils.Core/BisUtils.Core.csproj
+++ b/BisUtils.Core/BisUtils.Core.csproj
@@ -1,10 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <PackageVersion>1.0.34</PackageVersion>
+        <TargetFrameworks>net6.0;net6.0-windows;net7.0</TargetFrameworks>
+        <Title>BisUtils.Core</Title>
+        <Authors>FlipperPlz, Ryann</Authors>
+        <PackageProjectUrl>https://github.com/FlipperPlz/BisUtils</PackageProjectUrl>
+        <PackageLicenseUrl>https://raw.githubusercontent.com/FlipperPlz/BisUtils/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/FlipperPlz/BisUtils</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
+    </ItemGroup>
 
 </Project>
