fix(dotnet): Fix Dependencies Issues With CSPROJ files
BisUtils.Core depends on Antlr therefore antlr should not be reimplemented in each package (as it was previously)

--- a/BisUtils.Generated/BisUtils.Generated.PreProcessor/BisUtils.Generated.PreProcessor.csproj
+++ b/BisUtils.Generated/BisUtils.Generated.PreProcessor/BisUtils.Generated.PreProcessor.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
+      <ProjectReference Include="..\..\BisUtils.Core\BisUtils.Core.csproj" />
     </ItemGroup>
 
 </Project>
