--- a/BisUtils/BisUtils.csproj
+++ b/BisUtils/BisUtils.csproj
@@ -7,4 +7,8 @@
         <WarningsAsErrors>Nullable</WarningsAsErrors>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Bank\Model\Entry\" />
+    </ItemGroup>
+
 </Project>
