--- a/BisUtils/BisUtils.csproj
+++ b/BisUtils/BisUtils.csproj
@@ -8,4 +8,8 @@
         <PublishAot>true</PublishAot>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentResults" Version="3.15.2" />
+    </ItemGroup>
+
 </Project>
