--- a/BisUtils/BisUtils.csproj
+++ b/BisUtils/BisUtils.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentResults" Version="3.15.2" />
+      <ProjectReference Include="..\Libraries\FResults\FResults\FResults.csproj" />
     </ItemGroup>
 
 </Project>
