feat(validation): Change bool to result in validation

--- a/BisUtils/BisUtils.csproj
+++ b/BisUtils/BisUtils.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Libraries\FResults\FResults\FResults.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Bank\Alerts\Warnings\" />
+    </ItemGroup>
+
 </Project>
