--- a/src/BisUtils.Param/BisUtils.Param.csproj
+++ b/src/BisUtils.Param/BisUtils.Param.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Models\" />
+      <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
     </ItemGroup>
 
 </Project>
