--- a/src/BisUtils.Param/BisUtils.Param.csproj
+++ b/src/BisUtils.Param/BisUtils.Param.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj"/>
+    <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Statements\" />
   </ItemGroup>
 
 </Project>
