--- a/src/File Formats/BisUtils.Bank/BisUtils.Bank.csproj
+++ b/src/File Formats/BisUtils.Bank/BisUtils.Bank.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
+    <ProjectReference Include="..\..\BisUtils.Core\BisUtils.Core.csproj" />
   </ItemGroup>
 
 </Project>
