--- a/src/File Formats/Languages/BisUtils.Param/BisUtils.Param.csproj
+++ b/src/File Formats/Languages/BisUtils.Param/BisUtils.Param.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\..\..\Pre Processors\BisUtils.PreProcessor.RV\BisUtils.PreProcessor.RV.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
