chore: Add BisUtils.All. Enable AOT Compatibility

--- a/src/File Formats/BisUtils.Bank/BisUtils.Bank.csproj
+++ b/src/File Formats/BisUtils.Bank/BisUtils.Bank.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\BisUtils.Core\BisUtils.Core.csproj" />
   </ItemGroup>
+
 
 </Project>
