--- a/src/Pre Processors/BisUtils.PreProcessor.RV/BisUtils.PreProcessor.RV.csproj
+++ b/src/Pre Processors/BisUtils.PreProcessor.RV/BisUtils.PreProcessor.RV.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PublishAot>true</PublishAot>
+        <IsAotCompatible>true</IsAotCompatible>
     </PropertyGroup>
 
     <ItemGroup>
