--- a/src/File Formats/BisUtils.P3D/BisUtils.P3D.csproj
+++ b/src/File Formats/BisUtils.P3D/BisUtils.P3D.csproj
@@ -7,4 +7,8 @@
     </PropertyGroup>
 
 
+    <ItemGroup>
+      <ProjectReference Include="..\Languages\BisUtils.Param\BisUtils.Param.csproj" />
+    </ItemGroup>
+
 </Project>
