--- a/src/File Formats/BisUtils.P3D/BisUtils.P3D.csproj
+++ b/src/File Formats/BisUtils.P3D/BisUtils.P3D.csproj
@@ -4,10 +4,13 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsAotCompatible>true</IsAotCompatible>
+
     </PropertyGroup>
 
 
     <ItemGroup>
+      
       <ProjectReference Include="..\Languages\BisUtils.Param\BisUtils.Param.csproj" />
     </ItemGroup>
 
