--- a/test/Scratches/ParamTest/ParamTest.csproj
+++ b/test/Scratches/ParamTest/ParamTest.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\BisUtils.Core\BisUtils.Core.csproj" />
+      <ProjectReference Include="..\..\..\src\File Formats\BisUtils.P3D\BisUtils.P3D.csproj" />
       <ProjectReference Include="..\..\..\src\File Formats\Languages\BisUtils.Param\BisUtils.Param.csproj" />
       <ProjectReference Include="..\..\..\src\Pre Processors\BisUtils.PreProcessor.RV\BisUtils.PreProcessor.RV.csproj" />
     </ItemGroup>
