--- a/src/File Formats/BisUtils.RVTexture/BisUtils.RVTexture.csproj
+++ b/src/File Formats/BisUtils.RVTexture/BisUtils.RVTexture.csproj
@@ -1,37 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <IsAotCompatible>true</IsAotCompatible>
-
     </PropertyGroup>
-
-
-    <ItemGroup>
-      
-      <ProjectReference Include="..\Languages\BisUtils.Param\BisUtils.Param.csproj" />
-
-
-
-
-
-
-
-
-
-
-
-
-    </ItemGroup>
-
-
-
-
-
-
-
-
 
 </Project>
