--- a/src/File Formats/BisUtils.RVTexture/BisUtils.RVTexture.csproj
+++ b/src/File Formats/BisUtils.RVTexture/BisUtils.RVTexture.csproj
@@ -1,10 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\BisUtils.Core\BisUtils.Core.csproj" />
+    </ItemGroup>
+
+
 
 </Project>
