feat: Finalize Changes

--- a/test/BisUtils.Bank.Benchmarks/BisUtils.Bank.Benchmarks.csproj
+++ b/test/BisUtils.Bank.Benchmarks/BisUtils.Bank.Benchmarks.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\BisUtils.RVBank\BisUtils.RVBank.csproj" />
     <ProjectReference Include="..\src\BisUtils.RVBank\BisUtils.RVBank.csproj" />
   </ItemGroup>
 
