feat(dzconfig): Crudely Finished DZConfig Implementation
- Remove DzCfgMods.cs and DzMod.cs, rename DzCfgPatches to DzCfgPatch, add DzConfig.cs and DzCfgMod.cs
- Models DzCfgMods and DzMod are deleted as they were redundant and inefficient.
- DzCfgPatches is renamed to DzCfgPatch to accurately represent its functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ artifacts/
 # StyleCop
 StyleCopReport.xml
 
+#  private sample 
+samples/BankProcessor/
+
 # Files built by Visual Studio
 *_i.c
 *_p.c
