feat(bank.extras): Create And Add BisUtils.Extensions.RVBank.Extras Project
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/src/BisUtils.Extensions.RVBank.DzConfigExtensions/BisUtils.Extensions.RVBank.DzConfigExtensions.csproj
+++ b/src/BisUtils.Extensions.RVBank.DzConfigExtensions/BisUtils.Extensions.RVBank.DzConfigExtensions.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>BisUtils.RVBank.Extensions.DzConfigExtensions</AssemblyName>
+        <RootNamespace>BisUtils.RVBank.Extensions.DzConfigExtensions</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
