--- a/src/BisUtils.Extensions.RVBank.Extras/BisUtils.Extensions.RVBank.Extras.csproj
+++ b/src/BisUtils.Extensions.RVBank.Extras/BisUtils.Extensions.RVBank.Extras.csproj
@@ -1,15 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\src\BisUtils.Extensions.RVBank.Extras\BisUtils.Extensions.RVBank.Extras.csproj" />
-      <ProjectReference Include="..\..\..\src\BisUtils.RVBank\BisUtils.RVBank.csproj" />
+      <ProjectReference Include="..\BisUtils.RVBank\BisUtils.RVBank.csproj" />
     </ItemGroup>
 
 </Project>
