feat(enconfig): Create Shell Lexer/Types For EnConfig (They Should Stay Relatively Untouched As All Tokens Used In The Language Are Defined Globally)
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/src/BisUtils.EnConfig/BisUtils.EnConfig.csproj
+++ b/src/BisUtils.EnConfig/BisUtils.EnConfig.csproj
@@ -7,4 +7,10 @@
     </PropertyGroup>
 
 
+    <ItemGroup>
+      <ProjectReference Include="..\BisUtils.EnLex\BisUtils.EnLex.csproj" />
+    </ItemGroup>
+
+
+
 </Project>
