--- a/templates/BisLexicalLibrary/BisLexicalLibrary.csproj
+++ b/templates/BisLexicalLibrary/BisLexicalLibrary.csproj
@@ -7,9 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
+      <Content Include=".template.config\template.json" />
     </ItemGroup>
 
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\BisUtils.Core\BisUtils.Core.csproj" />
+    </ItemGroup>
 
 
 
