--- a/src/BisUtils.RvLex/BisUtils.RvLex.csproj
+++ b/src/BisUtils.RvLex/BisUtils.RvLex.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Lexer\" />
+      <Folder Include="Tokens\" />
+    </ItemGroup>
+
 </Project>
