chore: Rename ExtraExtensions To Avoid Unnecessary Capitalization
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/test/Scratches/BankTest/BankTest.csproj
+++ b/test/Scratches/BankTest/BankTest.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\src\BisUtils.RVBank.ExtraExtensions\BisUtils.RVBank.ExtraExtensions.csproj" />
+      <ProjectReference Include="..\..\..\src\BisUtils.RvBank.ExtraExtensions\BisUtils.RvBank.ExtraExtensions.csproj" />
       <ProjectReference Include="..\..\..\src\BisUtils.RvBank\BisUtils.RvBank.csproj" />
     </ItemGroup>
 
