--- a/src/BisUtils.RvBank.ExtraExtensions/BisUtils.RvBank.ExtraExtensions.csproj
+++ b/src/BisUtils.RvBank.ExtraExtensions/BisUtils.RvBank.ExtraExtensions.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>BisUtils.RVBank.ExtraExtensions</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
