feat(rv): Start Work On Implementing New Lexer/Parser Framework To BisUtils.Param
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/src/BisUtils.Param/BisUtils.Param.csproj
+++ b/src/BisUtils.Param/BisUtils.Param.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
+    <ProjectReference Include="..\BisUtils.RvLex\BisUtils.RvLex.csproj" />
     <ProjectReference Include="..\BisUtils.RvProcess\BisUtils.RvProcess.csproj" />
   </ItemGroup>
+
 
 
 
