chore: Rename BisUtils.Param to BisUtils.RvConfig
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/src/BisUtils.DZConfig/BisUtils.DZConfig.csproj
+++ b/src/BisUtils.DZConfig/BisUtils.DZConfig.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
-      <ProjectReference Include="..\BisUtils.Param\BisUtils.Param.csproj" />
+      <ProjectReference Include="..\BisUtils.RvConfig\BisUtils.RvConfig.csproj" />
       <ProjectReference Include="..\BisUtils.RvProcess\BisUtils.RvProcess.csproj" />
     </ItemGroup>
 
