--- a/src/BisUtils.All/BisUtils.All.csproj
+++ b/src/BisUtils.All/BisUtils.All.csproj
@@ -11,7 +11,7 @@
       <ProjectReference Include="..\..\lib\FResults\FResults\FResults.csproj" />
       <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
       <ProjectReference Include="..\BisUtils.RvBank\BisUtils.RvBank.csproj" />
-      <ProjectReference Include="..\BisUtils.Param\BisUtils.Param.csproj" />
+      <ProjectReference Include="..\BisUtils.RvConfig\BisUtils.RvConfig.csproj" />
       <ProjectReference Include="..\BisUtils.RvProcess\BisUtils.RvProcess.csproj" />
     </ItemGroup>
   
