--- a/test/Scratches/ShapeTest/ShapeTest.csproj
+++ b/test/Scratches/ShapeTest/ShapeTest.csproj
@@ -10,7 +10,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\BisUtils.Core\BisUtils.Core.csproj" />
       <ProjectReference Include="..\..\..\src\BisUtils.RvShape\BisUtils.RvShape.csproj" />
-      <ProjectReference Include="..\..\..\src\BisUtils.Param\BisUtils.Param.csproj" />
+      <ProjectReference Include="..\..\..\src\BisUtils.RvConfig\BisUtils.RvConfig.csproj" />
       <ProjectReference Include="..\..\..\src\BisUtils.RvProcess\BisUtils.RvProcess.csproj" />
     </ItemGroup>
 
