--- a/src/BisUtils.RvBank.DzConfigExtensions/BisUtils.RvBank.DzConfigExtensions.csproj
+++ b/src/BisUtils.RvBank.DzConfigExtensions/BisUtils.RvBank.DzConfigExtensions.csproj
@@ -11,7 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BisUtils.DZConfig\BisUtils.DZConfig.csproj" />
+      <ProjectReference Include="..\BisUtils.DzConfig\BisUtils.DzConfig.csproj" />
       <ProjectReference Include="..\BisUtils.RvBank\BisUtils.RvBank.csproj" />
     </ItemGroup>
 
