refactor(rvConfig): Move RvConfig Over To ParsingFramework
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/src/BisUtils.RvLex/BisUtils.RvLex.csproj
+++ b/src/BisUtils.RvLex/BisUtils.RvLex.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\BisUtils.Core\BisUtils.Core.csproj" />
+      <ProjectReference Include="..\BisUtils.Core.ParsingFramework\BisUtils.Core.ParsingFramework.csproj" />
     </ItemGroup>
 
 </Project>
