--- a/src/BisUtils.EnLex/BisUtils.EnLex.csproj
+++ b/src/BisUtils.EnLex/BisUtils.EnLex.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
+      <ProjectReference Include="..\BisUtils.RvLex\BisUtils.RvLex.csproj" />
     </ItemGroup>
 
 
