fix: Clean Up Remaining Errors From ParseFramework Change
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/templates/BisUtils.LexLibrary/BisUtils.LexLibrary.csproj
+++ b/templates/BisUtils.LexLibrary/BisUtils.LexLibrary.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\BisUtils.Core.ParsingFramework\BisUtils.Core.ParsingFramework.csproj" />
       <ProjectReference Include="..\..\src\BisUtils.Core\BisUtils.Core.csproj" />
     </ItemGroup>
 
