chore: Remove BisUtils.Core.ParsingFramework Add LangAssembler submodule
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Libraries/FResults"]
 	path = lib/FResults
 	url = https://github.com/FlipperPlz/FResults
+[submodule "lib/LangAssembler"]
+	path = lib/LangAssembler
+	url = https://github.com/FlipperPlz/LangAssembler/
