--- a/src/BisUtils.EnLex/BisUtils.EnLex.csproj
+++ b/src/BisUtils.EnLex/BisUtils.EnLex.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\lib\LangAssembler\src\LangAssembler.Lexer\LangAssembler.Lexer.csproj" />
       <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
       <ProjectReference Include="..\BisUtils.RvLex\BisUtils.RvLex.csproj" />
     </ItemGroup>
