feat(LAsm): Fix Up Compile Errors Regarding Parsing Library Change
Signed-off-by: ryann <flipperplz@protonmail.com>

--- a/src/BisUtils.EnConfig/BisUtils.EnConfig.csproj
+++ b/src/BisUtils.EnConfig/BisUtils.EnConfig.csproj
@@ -8,6 +8,7 @@
 
 
     <ItemGroup>
+      <ProjectReference Include="..\..\lib\LangAssembler\src\LangAssembler.Parser\LangAssembler.Parser.csproj" />
       <ProjectReference Include="..\BisUtils.EnLex\BisUtils.EnLex.csproj" />
     </ItemGroup>
 
