--- a/src/BisUtils.RvConfig/BisUtils.RvConfig.csproj
+++ b/src/BisUtils.RvConfig/BisUtils.RvConfig.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\lib\LangAssembler\src\LangAssembler.Parser\LangAssembler.Parser.csproj" />
     <ProjectReference Include="..\BisUtils.Core\BisUtils.Core.csproj" />
     <ProjectReference Include="..\BisUtils.RvLex\BisUtils.RvLex.csproj" />
     <ProjectReference Include="..\BisUtils.RvProcess\BisUtils.RvProcess.csproj" />
